--- a/src/index.html
+++ b/src/index.html
@@ -16,56 +16,56 @@
 <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="POST" autocomplete="off">
   <fieldset>
     <legend>Personal information</legend>
-    <div>
+    <div class="form-field">
       <label for="surname">Surname:</label>
       <input type="text" name="surname" id="surname" minlength="2" required>
     </div>
-    <div>
+    <div class="form-field">
       <label for="name">Name:</label>
       <input type="text" name="name" id="name" minlength="2" required>
     </div>
-    <div>
+    <div class="form-field">
       <label for="age">How old are You?</label>
       <input type="number" name="age" id="age"  value="12" data-qa="field-value" required>
     </div>
-    <div>
+    <div class="form-field">
       <label for="date">Full date of birthday:</label>
       <input type="date" name="date" id="date" required>
     </div>
-    <div>
+    <div class="form-field">
       <label for="agreement">I accept the term of the agreement</label>
       <input type="checkbox" name="agreement" id="agreement">
     </div>
   </fieldset>
   <fieldset>
     <legend>Registration</legend>
-    <div>
+    <div class="form-field">
       <label for="email">E-mail:</label>
       <input type="email" name="email" id="email" data-qa="field-placeholder" placeholder="email@example.com" required>
     </div>
-    <div>
+    <div class="form-field">
       <label for="password">Password:</label>
       <input type="password" name="name" id="password" required>
     </div>
   </fieldset>
   <fieldset>
     <legend>An interesting fact about you!</legend>
-    <div>
+    <div class="form-field">
       <label for="love-cats-yes">Do you love cats?</label>
       <input type="radio" name="love-cats" id="love-cats-yes">
       <label for="love-cats-yes">Yes</label>
       <input type="radio" name="love-cats" id="love-cats-no">
       <label for="love-cats-no">No</label>
     </div>
-    <div>
+    <div class="form-field">
       <label for="color">What is your favorite color?</label>
       <input type="color" name="color" id="color">
     </div>
-    <div>
+    <div class="form-field">
       <label for="time">What time do you go bed?</label>
       <input type="time" name="time" id="time" step="2">
     </div>
-    <div>
+    <div class="form-field">
       <label for="cars">What your favorite brand of cars?</label>
       <select name="cars" id="cars" multiple>
         <option value="bmw">BMW</option>
@@ -73,14 +73,14 @@
         <option value="lada">Lada</option>
       </select>
     </div>
-    <div>
+    <div class="form-field">
       <label for="range">How do you rate our work?</label>
       <input type="range" name="range" id="range" min="0" max="5" value="0" step="1">
     </div>
   </fieldset>
   <fieldset>
     <legend>Additional info:</legend>
-    <div>
+    <div class="form-field">
       <label for="comments">Comments:</label>
       <textarea  name="comments" id="comments" maxlength="300"></textarea>
     </div>
